Fixed spacing from the site title to theme

--- a/style.css
+++ b/style.css
@@ -1144,7 +1144,7 @@ h1 {
 
 .themes-section {
   max-width: 900px;
-  margin: 0 auto 20px auto;
+  margin: 24px auto 20px auto;
   padding: 0 20px;
 }
 
